# RayTracer-Vulkan

./: .gitignore  CMakeLists.txt  CMakeSettings.json  EngineFolderStructure.txt  cpp.hint  desktop.ini
Application/: CMakeLists.txt
Application/src/: main.cpp
Engine/: CMakeLists.txt
Engine/include/: Editor.hpp  SingularityEngine_export.h  camera.h  engine_core.h  vk_descriptors.h  vk_engine.h  vk_loader.h  vk_types.h
Engine/src/: Editor.cpp  camera.cpp  pch.h  vk_descriptors.cpp  vk_engine.cpp  vk_images.cpp  vk_initializers.cpp  vk_loader.cpp  vk_pipelines.cpp
Engine/src/RHI/: buffer.hpp  command_list.hpp  descriptor.hpp  device.hpp  fence.hpp  heap.hpp  memory_block.hpp  pipeline.hpp  resource.hpp  rhi.cpp  rhi.hpp  shader.hpp  swapchain.hpp  texture.hpp  types.hpp
Engine/src/RHI/vulkan/: vulkan_buffer.cpp  vulkan_buffer.hpp  vulkan_command_list.cpp  vulkan_command_list.hpp  vulkan_constant_buffer_allocator.cpp  vulkan_constant_buffer_allocator.hpp  vulkan_core.cpp  vulkan_core.hpp  vulkan_deletion_queue.cpp  vulkan_deletion_queue.hpp  vulkan_descriptor.cpp  vulkan_descriptor.hpp  vulkan_descriptor_allocator.cpp  vulkan_descriptor_allocator.hpp  vulkan_device.cpp  vulkan_device.hpp  vulkan_fence.cpp  vulkan_fence.hpp  vulkan_heap.cpp  vulkan_heap.hpp  vulkan_pipeline.cpp  vulkan_pipeline.hpp  vulkan_shader.cpp  vulkan_shader.hpp  vulkan_swapchain.cpp  vulkan_swapchain.hpp  vulkan_texture.cpp  vulkan_texture.hpp
Engine/src/core/: engine.cpp  engine.hpp  logger.cpp  logger.hpp  window.cpp  window.hpp
Engine/src/internal/: PerformaceTimer.hpp  performance_timer.hpp  vk_images.h  vk_initializers.h  vk_pipelines.h
Engine/src/renderer/: gpu_scene.cpp  gpu_scene.hpp  renderer.cpp  renderer.hpp  shader_cache.cpp  shader_cache.hpp  shader_compiler.cpp  shader_compiler.hpp  staging_buffer_allocator.cpp  staging_buffer_allocator.hpp
Engine/src/renderer/backend/: backend_interface.hpp
Engine/src/renderer/backend/Vulkan/: vulkan_backend.cpp  vulkan_backend.hpp
Engine/src/renderer/render_graph/: directed_acyclic_graph.cpp  directed_acyclic_graph.hpp  render_graph.cpp  render_graph.hpp  render_graph.inl  render_graph_builder.hpp  render_graph_handle.hpp  render_graph_nodes_edges.hpp  render_graph_pass.cpp  render_graph_pass.hpp  render_graph_resource_allocator.cpp  render_graph_resource_allocator.hpp  render_graph_resources.cpp  render_graph_resources.hpp
Engine/src/renderer/resources/: formatted_buffer.cpp  formatted_buffer.hpp  index_buffer.cpp  index_buffer.hpp  raw_buffer.cpp  raw_buffer.hpp  structured_buffer.cpp  structured_buffer.hpp  texture2D.cpp  texture2D.hpp
Engine/src/scene/: camera.cpp  camera.hpp
Engine/src/scene/mesh/: material.hpp  mesh.hpp
Engine/src/utils/: global_new_delete.cpp  linear_allocator.hpp  math.hpp  memory.hpp  signal.hpp
shaders/: CMakeLists.txt  coloured_mesh.vert  coloured_triangle.frag  coloured_triangle.vert  compile_shaders.py  defaultShader.hlsl  global_constants.hlsli  gpu_scene.hlsli  gradient.comp  input_structures.glsl  mesh.vert  sky.comp  tex_image.frag  triangleShader.hlsl
